[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry]
name = "canvasxpress-pandas-example"
version = "1.0"
description = "An example use of Pandas Dataframes with CanvasXpress"
authors = [
    "Aggregate Genius Inc.",
    "Dr. Todd C. Brett (todd.brett@bms.com)"
]
license = "MIT"
exclude = ["**"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
canvasxpress = {extras = ["jupyter"], version = "^2025.3.16.1951"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"